# diplomcheg

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  restaurants.json
config/: settings.py  urls.py
restaurants/: admin.py  forms.py  models.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py  0002_alter_table_unique_together.py  0002_reserve_table.py  0003_alter_reserve_client_alter_reserve_table.py  0004_feedback.py  0005_rename_client_feedback_user.py  0006_alter_feedback_restaurant.py
restaurants/templates/restaurants/: base.html  feedback_form.html  feedback_success.html  reserve_form.html  reserve_list.html  restaurant_confirm_delete.html  restaurant_detail.html  restaurant_form.html  restaurant_list.html
restaurants/templates/restaurants/includes/: inc_menu.html
restaurants/templatetags/: my_tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_first_name_alter_user_last_name.py
users/templates/users/: login.html  password_reset.html  user_form.html
